--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,10 @@ jobs:
         with:
           name: PDF
           path: main.pdf
+      - name: Copy PDF document
+        run: mkdir docs && cp *.pdf docs/
+      - name: Deploy pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
