--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,13 @@ name: Build LaTeX document
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   pull_request:
-    branches: [ main ]
+    branches: [ main, develop ]
+    types: [ closed ]
     
 jobs:
   build_latex:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
@@ -23,11 +25,13 @@ jobs:
       - name: Copy PDF document
         run: mkdir released_paper && cp *.pdf released_paper/
       - name: Deploy pages
+        if: ${{ github.event.pull_request.base.ref != 'main'}}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./released_paper
       - name: Commit changed files
+        if: ${{ startsWith( github.event.pull_request.head.ref, 'release' )}}
         uses: stefanzweifel/git-auto-commit-action@v2.3.0
         with:
           commit_message: Release a paper
