--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build_latex:
     runs-on: ubuntu-latest
-    if: ${{ github.event.pull_request.merged == true }} | ${{ startsWith( github.event.pull_request.head.ref, 'release' )}}
+    if: ${{ github.event.pull_request.merged == true }} || ${{ startsWith( github.event.pull_request.head.ref, 'release' )}}
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
