--- a/.github/workflows/merge_develop.yml
+++ b/.github/workflows/merge_develop.yml
@@ -8,7 +8,7 @@ on:
     types: [closed]
     
 jobs:
-  build_latex:
+  deploy_paper:
     if: ${{ github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
@@ -31,7 +31,7 @@ jobs:
           name: PDF
           path: slide.pdf
       - name: Copy PDF document
-        run: mkdir released_paper && cp *.pdf released_paper/
+        run: mkdir -p released_paper && cp *.pdf released_paper/
       - name: Deploy pages
         uses: peaceiris/actions-gh-pages@v3
         with:
