--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,6 @@
           ]
         }
       ],
-      "latex-workshop.latex.autoBuild.run": "onFileChange",
+      "latex-workshop.latex.autoBuild.run": "never",
       "latex-workshop.view.pdf.viewer": "tab"
 }
